[Feat] Se agg el esqueleto de la página en el html

--- a/index.html
+++ b/index.html
@@ -3,9 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404 No Encontrada</title>
+    <meta name="author" content="alvadev">
+    <meta name="description" content="page 404 not found">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="shortcut icon" href="/assets/images/devchallenges.png" type="image/x-icon">
+    <title>404 Not Found</title>
 </head>
 <body>
-    
+    <head>
+        <h3>404 NOT FOUND</h3>
+    </head>
+    <main>
+        <img src="/assets/images/Scarecrow.png" alt="">
+        <h1>I have bad news for you</h1>
+        <p>
+            The page you are looking for might be removed or is temporarily unavailable
+        </p>
+    </main>
+    <footer>
+        <p>created by <b>alvadev</b> devChallenges.io</p>
+    </footer>
 </body>
 </html>
