--- a/index.html
+++ b/index.html
@@ -1,27 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- metadatos -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="alvadev">
     <meta name="description" content="page 404 not found">
+    <!-- styles css -->
     <link rel="stylesheet" href="/css/style.css">
+    <!-- favicon -->
     <link rel="shortcut icon" href="/assets/images/devchallenges.png" type="image/x-icon">
+    <!-- google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@700&family=Montserrat:wght@700&family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
     <title>404 Not Found</title>
 </head>
 <body>
-    <head>
-        <h3>404 NOT FOUND</h3>
-    </head>
+    <header>
+        <p id="tittle-not-found">404 NOT FOUND</p>
+    </header>
     <main>
-        <img src="/assets/images/Scarecrow.png" alt="">
-        <h1>I have bad news for you</h1>
-        <p>
-            The page you are looking for might be removed or is temporarily unavailable
-        </p>
+        <div class="div-img">
+            <img src="/assets/images/Scarecrow.png" alt="image scarecrow 404">
+        </div>
+        <div class="div-block">
+            <h1 id="main-tittle">I have bad news for you</h1>
+            <p id="information-paragraph">
+                The page you are looking for might be removed or is temporarily unavailable
+            </p>
+            <button id="btn-back">BACK TO HOMEPAGE</button>
+        </div>
     </main>
-    <footer>
-        <p>created by <b>alvadev</b> devChallenges.io</p>
+    <footer class="footer">
+        <p id="footer-paragraph">created by <u>alvadev</u> devChallenges.io</p>
     </footer>
 </body>
 </html>
