[Fix] 2da restructuracion de acomodo de elementos por media queries

--- a/index.html
+++ b/index.html
@@ -40,9 +40,11 @@
       </div>
     </main>
     <footer class="footer">
-      <p class="footer-paragraph container">
-        created by <span> alvadev </span> devChallenges.io
-      </p>
+      <div>
+        <p class="footer-paragraph container">
+          created by <span> alvadev </span> devChallenges.io
+        </p>
+      </div>
     </footer>
   </body>
 </html>
